
  Closes #4301

* ``BaseChecker`` classes now require the ``linter`` argument to be passed.

* Update ``invalid-slots-object`` message to show bad object rather than its inferred value.

  Closes #6101

* Added new checker ``typevar-name-mismatch``: TypeVar must be assigned to a variable with the same name as its name argument.

  Closes #5224

* The ``config`` attribute of ``BaseChecker`` has been deprecated. You can use ``checker.linter.config``
  to access the global configuration object instead of a checker-specific object.

  Ref #5392

* The ``level`` attribute of ``BaseChecker`` has been deprecated: everything is now
  displayed in ``--help``, all the time.

  Ref #5392

* The ``options_providers`` attribute of ``ArgumentsManager`` has been deprecated.

  Ref #5392

* The ``option_groups`` attribute of ``PyLinter`` has been deprecated.

  Ref #5392


* The ``set_option`` method of ``BaseChecker`` has been deprecated. You can use ``checker.linter.set_option``
  to set an option on the global configuration object instead of a checker-specific object.

  Ref #5392

* The ``config`` attribute of ``PyLinter`` is now of the ``argparse.Namespace`` type instead of
  ``optparse.Values``.

  Ref #5392

* ``UnsupportedAction`` has been deprecated.

  Ref #5392

* ``OptionsManagerMixIn`` has been deprecated.

  Ref #5392

* ``OptionParser`` has been deprecated.

  Ref #5392

* ``Option`` has been deprecated.

  Ref #5392

* ``OptionsProviderMixIn`` has been deprecated.

  Ref #5392

* ``ConfigurationMixIn`` has been deprecated.

  Ref #5392

* ``get_global_config`` has been deprecated. You can now access all global options from
  ``checker.linter.config``.

  Ref #5392

* ``OptionsManagerMixIn`` has been replaced with ``ArgumentsManager``. ``ArgumentsManager`` is considered
  private API and most methods that were public on ``OptionsManagerMixIn`` have now been deprecated and will
  be removed in a future release.

  Ref #5392
