@@ -59,6 +59,11 @@ class DeprecatedMixin(BaseChecker):
         ),
     }
 
+    def check_consistency(self):
+        """This is a mixin, so there is no expectation that the messages should be
+        mutually exclusive. They will overlap between checkers by design."""
+        pass
+
     @utils.check_messages(
         "deprecated-method",
         "deprecated-argument",
